--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
 $fontColor: #FFFFFF;
-$fontFamily: 'Roboto', serif;
+$fontFamily: 'Roboto', sans-serif;
 $darkModeDark: #1C1C1E;
 $darkModeLight: #2C2C2E;
