add initial graph view

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -4,3 +4,13 @@ $fontColor: #FFFFFF;
 $fontFamily: 'Roboto', sans-serif;
 $darkModeDark: #1C1C1E;
 $darkModeLight: #2C2C2E;
+$warning: #FF002F;
+$good: #00FF3C;
+$graphRed: #E74765;
+$graphYellow: #FFC107;
+$graphGreen: #28A745;
+$graphBlue: #007BFF;
+$graphBrown: #6b350f;
+$graphWhite: #FFFFFF;
+$graphBlack: #000000;
+$graphGrey: #6C757D;
